# tidal-git

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  main.rs
src/cred/: gpg.rs  mod.rs
src/driver/: detect.rs  mod.rs
src/driver/github/: cli.rs  err.rs  mod.rs  req.rs
src/tidal/: mod.rs  req.rs
