[package]
name = "tidal-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env"] }
gix = "0.55.2"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
