[package]
name = "tidal-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
clap = { version = "4.4.7", features = ["derive", "env"] }
dirs = "5.0.1"
gix = "0.55.2"
gpgme = "0.11.0"
open = "5.0.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
